--- a/aboutus.html
+++ b/aboutus.html
@@ -25,27 +25,19 @@
 <body>
 
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <!--anteriormente estaba la clase bg-primary para el color primario por defecto de bootstrap-->
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar"> 
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="./index.html">Ristorante Con Fusion</a>
-
+            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <!--mr define la margen derecha-->
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>Home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span>About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Menu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span>Contact</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -119,7 +111,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
