--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Bootstrap social-->
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <!--CSS-->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles-old.css">
 
     <title>Ristorante Con Fusion</title>
 </head>
@@ -327,25 +327,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#mycarousel').carousel({
-                interval: 2000
-            });
-            $('#carouselButton').click(function() {
-                if ($('#carouselButton').children('span').hasClass('fa-pause')) {
-                    $('#mycarousel').carousel('pause');
-                    $('#carouselButton').children('span').removeClass('fa-pause');
-                    $('#carouselButton').children('span').addClass('fa-play');
-                } else {
-                    $('#mycarousel').carousel('cycle');
-                    $('#carouselButton').children('span').removeClass('fa-play');
-                    $('#carouselButton').children('span').addClass('fa-pause');
-                }
-            });
-
-        });
-    </script>
+    <script src="js/scripts.js"></script>
 
 
 </html>
