--- a/aboutus.html
+++ b/aboutus.html
@@ -11,6 +11,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!--build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!--Font Awesome-->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
@@ -19,7 +20,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="css/styles.css">
-
+    <!--endbuild-->
 </head>
 
 <body>
@@ -281,11 +282,12 @@
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!--build:js js/main.js-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
-
+    <!--endbuild-->
 </body>
 
 </html>
